test/fail/enhanced-migration-no-dir.mo
//MOC-FLAG --enhanced-orthogonal-persistence --default-persistent-actors --enhanced-migration enhanced-migration/bogus
//MOC-FLAG -A=M0194

actor {
    let a : Float;
    let b : Bool;
};
